--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ tagline: ParCFD International Conference 2025
 email: carlos.cajas@enesmerida.unam.mx
 description: >
   Website of the 36th Parallel CFD International Conference 2025
-baseurl: "/ParCFD2025.github.io/"
-url: "www.parcfd2025.org"
+baseurl: "/demag.github.io/"
+url: #"www.parcfd2025.org"
 permalink: pretty
 favicon: /img/ParCFD_logo_tr.png
 #/path/to/favicon.png
@@ -25,7 +25,7 @@ disqus:
   # Leave shortname blank to disable comments site-wide.
   # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
   # shortname: my_disqus_shortname
-  shortname: 
+  shortname:
 
 
 plugins:
@@ -36,7 +36,7 @@ plugins:
   - kramdown-parser-gfm
   - jekyll-redirect-from
 
-exclude: 
+exclude:
   - Gemfile
   - clean-theme.gemspec
   - Gemfile.lock
@@ -51,7 +51,7 @@ livereload: true
 sass:
   style: compressed
   source_dir: _sass
-  # load_paths: 
+  # load_paths:
     # - node_modules
 
 #google_analytics: UA-code-here
@@ -80,7 +80,7 @@ highlighter: rouge
 footer_menu: example_footer_menu
 
 collections:
-  products: 
+  products:
     output: true
     layout: product
     image: https://via.placeholder.com/800x600
@@ -93,4 +93,3 @@ collections:
 #  tiktok: https://www.tiktok.com/
 #  x: https://www.x.com/
 #  youtube: https://www.youtube.com/
-  
