--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: carlos.cajas@enesmerida.unam.mx
 description: >
   Website of the 36th Parallel CFD International Conference 2025
 baseurl: "/demag.github.io/"
-url: "https://enes-merida.github.io/demag.github.io/"
+url: ""
 permalink: pretty
 favicon: /img/ParCFD_logo_tr.png
 #/path/to/favicon.png
