--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-lang: en
+lang: es
 title: ParCFD International Conference 2025
 tagline: ParCFD International Conference 2025
 email: carlos.cajas@enesmerida.unam.mx
