--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,13 @@
 #- name: Docs
 #  link: /docs/
-- name: Call for contributions
-  link: /#
-  dropdown:
-    - name: Call for minisymposia
-      link: /call-minisymposia/
-    - name: Call for papers
-      link: /call-papers/
+- name: Sobre nosotros
+  link: /demag/
+#  link: /#
+#  dropdown:
+#    - name: Call for minisymposia
+#      link: /call-minisymposia/
+#    - name: Call for papers
+#      link: /call-papers/
 #    - name: Landing Page With Callouts
 #      link: /landing/
 #    - name: Promo Page
@@ -21,28 +22,31 @@
 #      link: /example-recipe/
 #    - name: Showcase
 #      link: /showcase/
-- name: About 36th ParCFD
-  link: /#
-  dropdown:
-    - name: Key dates and registration
-      link: /key-dates-registration/
-    - name: Invited Speakers
-      link: /invited-speakers/
-    - name: Local Committee
-      link: /committees/
+- name: Personas
+  link: /personas/
+#  link: /#
+#  dropdown:
+#    - name: Key dates and registration
+#      link: /key-dates-registration/
+#    - name: Invited Speakers
+#      link: /invited-speakers/
+#    - name: Local Committee
+#      link: /committees/
 #    - name: Information for Presenters, Listeners and sessions Chairs
 #      link: /information-presenters-listeners-session/
-- name: Travelling
-  link: /#
-  dropdown:
-    - name: Accomodation
-      link: /accomodation/
-    - name: Venue
-      link: /venue/
-- name: Programme
-  link: /#
-  dropdown:
-    - name: Accepted Mini-Symposia
-      link: /accepted-minisymposia/
+- name: Líneas de Investigación
+  link: /lineas-investigacion
+#  link: /#
+#  dropdown:
+#    - name: Accomodation
+#      link: /accomodation/
+#    - name: Venue
+#      link: /venue/
+- name: Artículos y Proyectos
+  link: proyectos
+#  link: /#
+#  dropdown:
+#    - name: Accepted Mini-Symposia
+#      link: /accepted-minisymposia/
 #- name: Blog
 #  link: /blog/
