--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 lang: es
-title: Departamento de Matemáticas Aplicadas y Geociencias
+title: DeMAG
 tagline: Departamento de Matemáticas Aplicadas y Geociencias
 email: carlos.cajas@enesmerida.unam.mx
 description: >
