refactor: se renombra endpoint de academicos a planta-academica
Se renombra endpoint academicos a planta-academica y el directorio
planta_academica a planta-academica. Se crea micrositio del Dr Juan
Zavala

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /#
   dropdown:
     - name: Planta Académica
-      link: /academicos/
+      link: /planta-academica/
     - name: Nuestros Estudiantes
       link: /estudiantes/
 - name: Líneas de Investigación
