chore: se cambian de nombres a ciertos endpoints y se mejora estructura de texto en la pagina sobre-nosotros
Se renombran ciertos endpoints para mayor claridad y congruencia con la
pagina web. Se reestructura el texto de la pagina sobre-nosotros.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 - name: Sobre nosotros
-  link: /demag/
+  link: /sobre-nosotros/
 - name: Nuestra Gente
   link: /#
   dropdown:
     - name: Planta Académica
       link: /planta-academica/
     - name: Nuestros Estudiantes
-      link: /estudiantes/
+      link: /nuestros-estudiantes/
 - name: Líneas de Investigación
   link: /lineas-investigacion/
 - name: Artículos y Proyectos
-  link: /proyectos/
+  link: /articulos-proyectos/
